Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.4.1
-
None
Description
In Qt 5.9.2 When we create a new project or new class it takes more time.Some times it hangs as well.
Attached the video file for reference.
Attachments
For Gerrit Dashboard: QTCREATORBUG-19131 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
209848,3 | Qmake: Make finding pro-files fast | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
210161,3 | Qmake: Make finding pro-files fast, second attempt | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |