src/plugins/qmakeprojectmanager/qmakenodes.cpp
@@ -44,20 +44,21 @@ namespace QmakeProjectManager {
   */
 
 QmakePriFileNode::QmakePriFileNode(QmakeProject *project, QmakeProFileNode *qmakeProFileNode,
-                                   const FileName &filePath) :
+                                   const FileName &filePath, QmakePriFile *pf) :
     ProjectNode(filePath),
     m_project(project),
-    m_qmakeProFileNode(qmakeProFileNode)
+    m_qmakeProFileNode(qmakeProFileNode),
+    m_qmakePriFile(pf)
 { }
 
 QmakePriFile *QmakePriFileNode::priFile() const
 {
-    return m_project->rootProFile()->findPriFile(filePath());
+    return m_qmakePriFile;
 }
 
 bool QmakePriFileNode::deploysFolder(const QString &folder) const
 {
-    QmakePriFile *pri = priFile();
+    const QmakePriFile *pri = priFile();
     return pri ? pri->deploysFolder(folder) : false;
 }
 
@@ -145,7 +146,7 @@ bool QmakePriFileNode::supportsAction(ProjectAction action, const Node *node) co
 
 bool QmakePriFileNode::canAddSubProject(const QString &proFilePath) const
 {
-    QmakePriFile *pri = priFile();
+    const QmakePriFile *pri = priFile();
     return pri ? pri->canAddSubProject(proFilePath) : false;
 }
 
@@ -213,8 +214,8 @@ QmakeProFileNode *QmakeProFileNode::findProFileFor(const FileName &fileName) con
   \class QmakeProFileNode
   Implements abstract ProjectNode class
   */
-QmakeProFileNode::QmakeProFileNode(QmakeProject *project, const FileName &filePath) :
-    QmakePriFileNode(project, this, filePath)
+QmakeProFileNode::QmakeProFileNode(QmakeProject *project, const FileName &filePath, QmakeProFile *pf) :
+    QmakePriFileNode(project, this, filePath, pf)
 { }
 
 bool QmakeProFileNode::showInSimpleTree() const
@@ -224,7 +225,7 @@ bool QmakeProFileNode::showInSimpleTree() const
 
 QmakeProFile *QmakeProFileNode::proFile() const
 {
-    return m_project->rootProFile()->findProFile(filePath());
+    return static_cast<QmakeProFile*>(QmakePriFileNode::priFile());
 }
 
 FolderNode::AddNewInformation QmakeProFileNode::addNewInformation(const QStringList &files, Node *context) const
